fix button/badge style on smaller screen

--- a/force-app/main/default/lwc/nksChatAuthenticationInfoV2/nksChatAuthenticationInfoV2.css
+++ b/force-app/main/default/lwc/nksChatAuthenticationInfoV2/nksChatAuthenticationInfoV2.css
@@ -6,3 +6,9 @@
     --slds-c-badge-color-background: #ffb24914;
     --slds-c-badge-color-border: #ffb249;
 }
+
+@media only screen and (max-width: 1920px) {
+    .slds-size_6-of-12 {
+        width: auto;
+    }
+}
